--- a/index.html
+++ b/index.html
@@ -3,38 +3,40 @@
 
 <head>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="footer.css">
     <title>Arena Sports</title>
     <script src="https://kit.fontawesome.com/6f0e8eb73f.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-
-    <img class="logo" src="IMG_0564.PNG" alt="logo">
+    <header>
+        <li><a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a></li>
+    </header>
 
     <p class="name">Sports Arena</p>
     <p class="Description">You develop your skills as you beat hours and hours of practice</p>
 
     <p class="username">@reznabid</p>
     <p class="socialdes">Follow us on our social media</p>
-
     <header>
         <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
-            <nav>
+            <nav class="navigation">
                 <ul>
-                    <button class="home home--secondary">
+                    <button class="button--secondary">
                         <li><a href="index.html">Home</a></li>
                     </button>
-                    <button class="schedule schedule--secondary">
+                    <button class="button--secondary">
                         <li><a href="schedule.html">Schedules</a></li>
                     </button>
-                    <button class="direction direction--secondary">
+                    <button class="button--secondary">
                         <li><a href="direction.html">Direction</a></li>
                     </button>
-                    <button class="codeconduct codeconduct--secondary">
+                    <button class="button--secondary">
                         <li><a href="codeconduct.html">Code of Conduct</a></li>
                     </button>
-                    <button class="contact contact--secondary">
+                    <button class="button--secondary">
                         <li><a href="contact.html">Contact</a></li>
                     </button>
                 </ul>
@@ -80,7 +82,6 @@
     <footer>
         <center class="ForBack">
             <p class="InfoName">Sports<br>Arena</p>
-            <p class="InfoAdd">1234 Somewhere av, SomeCity 45678</p>
             <p class="rights">@All rights are reserved. Terms of use | Privacy Policy.</p>
 
             <div class="socialmedia">
@@ -91,8 +92,9 @@
                 <a href="https://www.linkedin.com/in/rezaul-islam-23118b255/" target="_blank"><i
                         class="fa-brands fa-linkedin"></i></a>
             </div>
+        </center>
     </footer>
-    </center>
+
 </body>
 
 
