--- a/direction.html
+++ b/direction.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/6f0e8eb73f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="direction.css">
+    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="footer.css">
     <title>Direction</title>
     <style>
 
@@ -13,7 +16,7 @@
 </head>
 
 <body>
-    <img class="logo" src="IMG_0564.PNG" alt="logo">
+    <li><a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a></li>
 
     <p class="name">Sports Arena</p>
     <p class="Description">You develop your skills as you beat hours and hours of practice</p>
@@ -22,28 +25,46 @@
     <p class="socialdes">Follow us on our social media</p>
 
 
-    <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
-        <nav>
-            <ul>
-                <button class="home home--secondary">
-                    <li><a href="index.html">Home</a></li>
-                </button>
-                <button class="schedule schedule--secondary">
-                    <li><a href="schedule.html">Schedules</a></li>
-                </button>
-                <button class="direction direction--secondary">
-                    <li><a href="direction.html">Direction</a></li>
-                </button>
-                <button class="codeconduct codeconduct--secondary">
-                    <li><a href="codeconduct.html">Code of Conduct</a></li>
-                </button>
-                <button class="contact contact--secondary">
-                    <li><a href="contact.html">Contact</a></li>
-                </button>
-            </ul>
-        </nav>
-    </div>
+    <header>
+        <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
+            <nav class="navigation">
+                <ul>
+                    <button class="button--secondary">
+                        <li><a href="index.html">Home</a></li>
+                    </button>
+                    <button class="button--secondary">
+                        <li><a href="schedule.html">Schedules</a></li>
+                    </button>
+                    <button class="button--secondary">
+                        <li><a href="direction.html">Direction</a></li>
+                    </button>
+                    <button class="button--secondary">
+                        <li><a href="codeconduct.html">Code of Conduct</a></li>
+                    </button>
+                    <button class="button--secondary">
+                        <li><a href="contact.html">Contact</a></li>
+                    </button>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <p>You go this way than take left and than take right. You will be here</p>
 
+    <footer>
+        <center class="ForBack">
+            <p class="InfoName">Sports<br>Arena</p>
+            <p class="rights">@All rights are reserved. Terms of use | Privacy Policy.</p>
+
+            <div class="socialmedia">
+                <a href="https://www.instagram.com/rez___nabid/" target="_blank"><i
+                        class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100029058875993" target="_blank"><i
+                        class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/rezaul-islam-23118b255/" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
+            </div>
+        </center>
+    </footer>
 </body>
 
 </html>
