New form added, code conduct added, float text added

--- a/codeconduct.html
+++ b/codeconduct.html
@@ -5,23 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/6f0e8eb73f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="codeconduct.css">
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;1,100&family=Shantell+Sans:wght@600&display=swap"
+        rel="stylesheet">
     <title>Code of Conduct</title>
-    <style>
 
-    </style>
 </head>
 
 <body>
-    <li><a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a></li>
+    <a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a>
     <p class="name">Sports Arena</p>
     <p class="Description">You develop your skills as you beat hours and hours of practice</p>
 
     <p class="username">@reznabid</p>
     <p class="socialdes">Follow us on our social media</p>
 
+    <!-- Start of butto html.-->
     <header>
         <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
             <nav class="navigation">
@@ -46,26 +51,83 @@
         </div>
     </header>
 
-    <p class="policyStart">Sports Arena has adopted a code of Conduct Policy.</p>
+    <!-- Video of code conduct page starts here.-->
 
-    <video class="video" autoplay loop src="codeconductvideo.mp4">
-        <source src="codeconductvideo.webM">
-        This browser does not support HTML5 audios.
-    </video>
+    <div class="container">
+        <div class="image">
+            <div class="image_overlay">
+                <h1>Code Of Conduct</h1>
+            </div>
+        </div>
+    </div>
 
-    <p class="firstPara">For any activity or event at Sports Arena, it is everyone's responsibility
-        to maintain the highest standards of conduct of themselves. Failure to so
-        undermines the general enjoyment of youth/adult sports, the referee's
-        authority and the integrity of the game results in an unnecessary hostile
-        environment for players, referees, coaches, and parents/spectators.
-    </p>
-    <br>
-    <p class="secondPara">
-        Abusive and obscene language, violent play/conduct, fighting and other behavior
-        deemed detrimental to the game will not be tolerated. This policy applies before,
-        during and after the event - inside or outside of the facility.
-    </p>
+    <div class="allconduct"></div>
+    <p class="policyheading">Sports Arena has adopted a code of Conduct Policy</p>
+    <div class="firstPara">
+        <p class="Paragraph">For any activity or event at Sports Arena, it is everyone's responsibility
+            to maintain the highest standards of conduct of themselves. Failure to so
+            undermines the general enjoyment of youth/adult sports, the referee's
+            authority and the integrity of the game results in an unnecessary hostile
+            environment for players, referees, coaches, and parents/spectators.
+        </p>
+        <br>
+        <p class="Paragraph">
+            Abusive and obscene language, violent play/conduct, fighting and other behavior
+            deemed detrimental to the game will not be tolerated. This policy applies before,
+            during and after the event - inside or outside of the facility.
+        </p>
+    </div>
+    <p class="policyheading">Coaches/Assitant coaches</p>
+    <div class="secondPara">
+        <p class="Paragraph">Coaches are expected to be supportive and acknowledge the effort,
+            good play and sportsmanship on the part of ALL players from either team in a game,
+            they have respect for their opponent, referees and spectators at all times. Conversely,
+            opponents, referees and spectators are to show respect and good sportsmanship to coaches.
+        </p>
+        <br>
+        <p class="Paragraph">Note: It is recommended that coaches or other team members do not in any
+            conversation with the referee(s) once the game has concluded. All comments should be brought
+            to the attention of the manager at the service desk.
+        </p>
+    </div>
+    <p class="policyheading">Players</p>
+    <div class="thirdPara">
+        <p class="Paragraph">Each player is expected to exhibit good sportsmanship at all times. Players
+            who engage in misconduct may be ejected or suspended from events. In severe cases of unsporting
+            behavior and violent conduct, players will receive long term disciplinary action, up to and
+            including suspension from participation in any future event at Sports Arena.
+        </p>
+    </div>
+    <p class="policyheading">Penalties</p>
+    <div class="fourthPara">
+        <p class="Paragraph">If in the opinion of the League, an individual has conducted themselves in an
+            excessively
+            physical manner or unsportsmanlike way, and depending on the severity and repetitiveness of an
+            offense(s),
+            the following actions may/will be taken:</p>
 
+        <p class="Paragraph"> a. A verbal warning to the offending party</p>
+
+        <p class="Paragraph"> b. Game stopped and instruction for offending party to leave the facility</p>
+
+        <p class="Paragraph"> c. Game stopped and abandoned (resulting in a forfeit for the offending parties team)
+            if the offending party does not leave the facility</p>
+
+        <p class="Paragraph"> d. Suspension of the offending party from all future events for a duration of time
+            until
+            an appropriate resolution has been taken to the satisfaction of The Sports Arena</p>
+
+        <p class="Paragraph"> e. Suspension of the offending party from all future events indefinitely</p>
+
+        <p class="Paragraph"> If a player, parent/spectator, coach, assistant coach is suspended/banned by The
+            Sports
+            Arena he/she is not
+            allowed to participate in or have any interaction with their team until they are reinstated.</p>
+    </div>
+    </div>
+
+
+    <!-- Footer starts here.-->
     <footer>
         <center class="ForBack">
             <p class="InfoName">Sports<br>Arena</p>
