--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,15 @@
 
 <body>
 
-    <li><a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a></li>
+    <a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a>
 
     <p class="name">Sports Arena</p>
     <p class="Description">You develop your skills as you beat hours and hours of practice</p>
 
     <p class="username">@reznabid</p>
     <p class="socialdes">Follow us on our social media</p>
+
+    <!-- Start of butto html.-->
     <header>
         <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
             <nav class="navigation">
@@ -80,7 +82,7 @@
                     Other <input type="radio" name="gender" value="Other">
                 </div>
                 <div class="name">
-                    <input type="number" name="phone" placeholder="Phone Number">
+                    <input type="text" name="phone" placeholder="Phone Number">
                 </div>
             </div>
 
@@ -154,19 +156,26 @@
             </div>
             <textarea name="" placeholder="Type the information you would like to know." id="massage" cols="20" rows="5"
                 maxlength="500"></textarea>
+
+            <div class="button">
+                <button class="submit">Submit</button>
+            </div>
+
     </form>
+    <br>
     </fieldset>
 
     <br>
     <br>
 
-
+    <!-- Footer starts here.-->
     <footer>
         <center class="ForBack">
             <p class="InfoName">Sports<br>Arena</p>
             <p class="rights">@All rights are reserved. Terms of use | Privacy Policy.</p>
 
             <div class="socialmedia">
+                <!-- Social media -->
                 <a href="https://www.instagram.com/rez___nabid/" target="_blank"><i
                         class="fa-brands fa-square-instagram"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100029058875993" target="_blank"><i
