--- a/direction.html
+++ b/direction.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <li><a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a></li>
+    <a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a>
 
     <p class="name">Sports Arena</p>
     <p class="Description">You develop your skills as you beat hours and hours of practice</p>
@@ -24,7 +24,7 @@
     <p class="username">@reznabid</p>
     <p class="socialdes">Follow us on our social media</p>
 
-
+    <!-- Start of butto html.-->
     <header>
         <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
             <nav class="navigation">
@@ -50,12 +50,14 @@
     </header>
     <p>You go this way than take left and than take right. You will be here</p>
 
+    <!-- Footer starts here.-->
     <footer>
         <center class="ForBack">
             <p class="InfoName">Sports<br>Arena</p>
             <p class="rights">@All rights are reserved. Terms of use | Privacy Policy.</p>
 
             <div class="socialmedia">
+                <!-- Social media -->
                 <a href="https://www.instagram.com/rez___nabid/" target="_blank"><i
                         class="fa-brands fa-square-instagram"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100029058875993" target="_blank"><i
