--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <li><a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a></li>
+        <a href="index.html"><img class="logo" src="IMG_0564.PNG" alt="logo"></a>
     </header>
 
     <p class="name">Sports Arena</p>
@@ -20,6 +20,8 @@
 
     <p class="username">@reznabid</p>
     <p class="socialdes">Follow us on our social media</p>
+
+    <!-- Start of butto html.-->
     <header>
         <div class="buttondiv"> <!--Buttons with class. Read all lines to find classes-->
             <nav class="navigation">
@@ -56,12 +58,15 @@
         </center>
     </picture>
     <p class="para1">Play your favorite game here</p>
+
+    <!--Buttons for different types of games.-->
     <div id="container">
         <div id="main">
             <div class="row">
                 <div class="column">
+                    <!--Image with floating text -->
                     <img class="imagebutton" src="Soccerbackground.jpeg" alt="SoccerBack">
-                    <h><button class="allbuttons">Soccer</button></h>
+                    <h><a href="soccer.html"><button class="allbuttons">Soccer</button></a></h>
                 </div>
                 <div class="column">
                     <img class="imagebutton" src="football.jpeg" alt="">
@@ -79,11 +84,13 @@
         </div>
     </div>
 
+    <!-- Footer starts here.-->
     <footer>
         <center class="ForBack">
             <p class="InfoName">Sports<br>Arena</p>
             <p class="rights">@All rights are reserved. Terms of use | Privacy Policy.</p>
 
+            <!-- Social media -->
             <div class="socialmedia">
                 <a href="https://www.instagram.com/rez___nabid/" target="_blank"><i
                         class="fa-brands fa-square-instagram"></i></a>
